--- a/portal/gil/templates/gil/portal.html
+++ b/portal/gil/templates/gil/portal.html
@@ -72,27 +72,7 @@
 <!--placeholder-->
 {% endblock %}
 {% block document_ready %}
-    <script>
-        $(document).ready(function() {
-            $("body").attr("class", "page-home");
-            $("aside").hide();
-            $(".side-nav-items__item--home").hide();
-            var hc = $(".home--item-container");
-            if (hc.length > 0) {
-                $("#portalScrollArrow").on("click", function() {
-                    var t = $("section.home--items-wrapper").offset().top;
-                    if (parseInt(t) >= 90) {
-                        $('html, body').animate({
-                            scrollTop: t - 90
-                        }, 1000);
-                    };
-                });
-            };
-            if (hc.length == 1) {
-                hc.removeClass("home--item-container").addClass("home--item-container-full");
-            };
-        });
-    </script>
+    <script src="{{url_for('.static', filename='js/portal.js')}}"></script>
 {% endblock %}
 
 
