--- a/portal/gil/templates/gil/contact.html
+++ b/portal/gil/templates/gil/contact.html
@@ -2,7 +2,7 @@
 {% block title %}{{_("Contact")}} {{super()}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
-    <main class="main">
+    <main class="main" data-section="contact">
       {{super()}}
        {% block header %}
         <header class="header header--white {%if user%}no-banner{%endif%}">
@@ -102,58 +102,5 @@
     </main>
 {% endblock %}
 {% block document_ready %}
-  <script>
-      $(document).ready(function(){
-
-        $("#first-name, #last-name").each(function() {
-            $(this).on("blur", function() {
-                var name = $("#first-name").val();
-                name += (name != "" ? " " : "") + $("#last-name").val();
-                $("#sendername").val(name.trim());
-            });
-        });
-        $("#submitButton").on("click", function(e) {
-            e.preventDefault();
-            var formData = {};
-            $("#contactForm").find("input, select, textarea, type").each(function() {
-                formData[$(this).attr("name")] = $(this).val() || $(this).text();
-            });
-
-            if (hasValue(formData.sendername) && hasValue(formData.body) && hasValue(formData.email)) {
-
-              var self = $(this), loadingIndicator = $(".contact-loading-indicator");
-
-              self.hide();
-              loadingIndicator.show();
-
-              $.ajax({
-                  data: formData,
-                  type: 'POST',
-                  url: '/contact',
-                  dataType: 'json',
-                  success: function(response) {
-                      var msgid = response['msgid'];
-                      $('#contactForm .post-contact-response').html("");
-                      setTimeout(function() {
-                        self.show();
-                        loadingIndicator.hide();
-                        document.location = '/contact/' + String(msgid);
-                      }, 1000);
-
-                  },
-                  error: function(response) {
-                      var msg = $('<div></div>').html(response.responseText);
-                      var error = $('p', msg).text()
-                      $('#contactForm .post-contact-response').html(error);
-                      self.show();
-                      loadingIndicator.hide();
-                  }
-              });
-          } else {
-              $('#contactForm .post-contact-response').html('{{ _("Please confirm all fields are filled.") }}');
-          };
-        });
-        setSelectedNavItem($(".side-nav-items__item--contact"));
-      });
-  </script>
+<script src="{{url_for('.static', filename='js/contact.js')}}"></script>
 {% endblock %}
