--- a/portal/gil/templates/gil/symptom-tracker.html
+++ b/portal/gil/templates/gil/symptom-tracker.html
@@ -2,7 +2,7 @@
 {% block title %}{{super()}} {{_("Symptom Tracker")}}{% endblock %}
 {% block head %} {{super()}}{% endblock %}
 {% block main %}
-    <main class="main symptom-tracker-main">
+    <main class="main symptom-tracker-main" data-section="symptomtracker" data-theme="white" data-link-identifier="symptom-tracker">
       {{ super() }}
       <div class="page-intro page-intro--dark page-intro--symptom-tracker" style="background-image: url({{url_for('static', filename='img/ST-Top-Background.jpg') }})">
         <div class="page-intro__content">
@@ -41,13 +41,4 @@
         </div>
       </div>
     </main>
-{% endblock %}
-{% block document_ready %}
-    <script>
-        $(document).ready(function() {
-            setSelectedNavItem($(".side-nav-items__item--symptomtracker"));
-            $("footer a[href='/symptom-tracker']").hide();
-            IO.clearSession("symptom-tracker");
-        });
-    </script>
 {% endblock %}
