--- a/portal/gil/templates/gil/about.html
+++ b/portal/gil/templates/gil/about.html
@@ -39,7 +39,7 @@
                     <use xlink:href="#ST-Graph"></use>
                   </svg></a></div>
               <div class="icon-box-wrap">
-                 <a class="icon-box icon-box--theme-compass" href="{{url_for('gil.exercise_and_diet')}}">
+                 <a class="icon-box icon-box--theme-compass exercise_diet-link community_of_wellness-link" href="{{url_for('gil.exercise_and_diet')}}">
                    <strong class="icon-box__subhead">{% trans %}Tool N<em>o</em>3: All Stages{% endtrans %}</strong>
                     <h4 class="icon-box__head">{{_("Exercise And Diet")}}</h4>
                     <span class="icon-box__lowhead">{{_("Personalized Guides")}}</span>
