add js file to GIL index page

--- a/portal/gil/templates/gil/index.html
+++ b/portal/gil/templates/gil/index.html
@@ -128,3 +128,6 @@
       </div>
     </main>
   {% endblock %}
+  {% block document_ready %}
+  <script src="{{url_for('.static', filename='js/index.js')}}"></script>
+  {% endblock %}
