fix js error, translation

--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -114,8 +114,8 @@
 {% endblock %}
 {%block additional_scripts %}<!--for any other scripts needed -->{% endblock %}
 <script>
-{% block document_ready -%}
-{%- endblock %}
+{% block document_ready %}
+{% endblock %}
 </script>
 </body>
 </html>
