--- a/portal/gil/templates/gil/base.html
+++ b/portal/gil/templates/gil/base.html
@@ -327,8 +327,8 @@
                 {% elif user.has_role(ROLE.PATIENT) %}
                     _paq.push(["setCustomDimension", 1, "Patient"]);
                 {% endif %}
-                {% if user.organizations.count() %}
-                    _paq.push(["setCustomDimension", 2, "{{ user.organizations[0].name }}"]);
+                {% if user.organizations.first() %}
+                    _paq.push(["setCustomDimension", 2, "{{ user.organizations.first().name }}"]);
                 {% endif %}
             {% endif %}
 
