--- a/portal/eproms/templates/eproms/base.html
+++ b/portal/eproms/templates/eproms/base.html
@@ -93,6 +93,7 @@
             {% endif %}
         {%- endwith %}
     {% endblock %}
+    <input type="hidden" id="__CRSF_TOKEN" value="{{csrf_token()}}"/>
 <script src="{{ url_for('static', filename='js/i18next-config.js') }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
 <script src="https://unpkg.com/i18next-xhr-backend@1.4.3/i18nextXHRBackend.min.js"></script>
