--- a/portal/eproms/templates/eproms/contact.html
+++ b/portal/eproms/templates/eproms/contact.html
@@ -56,61 +56,11 @@
         <button id="submitButton" class="btn btn-tnth-primary btn-lg">{{ _("Submit") }}</button>
       </div>
     </form>
-
   </div>
-
 </div>
-
-<script>
-  $(document).ready(function(){
-    $('#profileForm').validator({
-      disable: false
-    });
-    $("#submitButton").on("click", function(e) {
-        e.preventDefault();
-
-        var formData = {};
-        $("#contactForm").find("input, select, textarea").each(function() {
-            formData[$(this).attr("name")] = $(this).val() || $(this).text();
-        });
-
-        if (hasValue(formData.sendername) && hasValue(formData.body) && hasValue(formData.email)) {
-
-          var self = $(this), loadingIndicator = $(".contact-loading-indicator");
-
-          self.hide();
-          loadingIndicator.show();
-
-          $.ajax({
-              data: formData,
-              type: 'POST',
-              url: '/contact',
-              dataType: 'json',
-              success: function(response) {
-                  var msgid = response['msgid'];
-                  $('#contactForm .post-contact-response').html("");
-                  setTimeout(function() {
-                    self.show();
-                    loadingIndicator.hide();
-                    document.location = '/contact/' + String(msgid);
-                  }, 1000);
-
-              },
-              error: function(response) {
-                  var msg = $('<div></div>').html(response.responseText);
-                  var error = $('p', msg).text()
-                  $('#contactForm .post-contact-response').html(error);
-                  self.show();
-                  loadingIndicator.hide();
-              }
-          });
-      } else {
-          $('#contactForm .post-contact-response').html('{{ _("Please confirm all fields are filled.") }}');
-      };
-    });
-  })
-</script>
+<div id="noResponseText" class="tnth-hide">{{_("Please confirm all fields are filled.")}}</div>
 {% block footer %}
 {{footer(user=user)}}
 {% endblock %}
 {% endblock %}
+{% block additional_scripts %}<script src="{{ url_for('.static', filename='js/contact.js') }}"></script>{% endblock %}
