TN-536 banner fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -78,7 +78,7 @@
 @labelColor: #777;
 @inputHeight: 2.5em;
 @wellColor: #F7F7F7;
-@notificationBgColor: #7c959d;
+@notificationBgColor: #EB1939;
 
 
 /**
